language/move-lang/tests/move_check/parser/friend_decl_inside_function.exp
error: 

   ┌── tests/move_check/parser/friend_decl_inside_function.move:6:9 ───
   │
 6 │         friend 0x42::A;
   │         ^^^^^^ Unexpected 'friend'
   ·
 6 │         friend 0x42::A;
   │         ------ Expected an expression term
   │

